--- a/index.html
+++ b/index.html
@@ -8,8 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        
-    </div>
+    <header class="header">
+        <div class="header__logo">MyServer</div>
+        <nav class="header__nav">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Planos</a></li>
+                <li><a href="">Suporte</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav>        
+    </header>
+    <h1 class="main-title">Escolha seu Plano</h1>
+
+    <section class="pricing">
+        <div class="pricing-plan">
+            <h2 class="class-plan__title">Essencial</h2>
+            <p><span>R$ 3.98</span>/ mês</p>
+            <ul class="pricing-plan__features">
+                <li>1 Website</li>
+                <li>1GB de Armazenamento</li>
+                <li>10GB de Transferencias</li>
+            </ul>
+            <a href="" class="pricing-plan__cta">Assine Já</a>
+        </div>
+        <div class="pricing-plan">
+            <h2 class="class-plan__title">Premium</h2>
+            <p><span>R$ 7.95</span>/ mês</p>
+            <ul class="pricing-plan__features">
+                <li>5 Website</li>
+                <li>3GB de Armazenamento</li>
+                <li>Transferencias ilimitadas</li>
+                <li>10 horas de suporte mensal</li>
+            </ul>
+            <a href="" class="pricing-plan__cta">Assine Já</a>
+        </div>
+        <div class="pricing-plan">
+            <h2 class="class-plan__title">Gold</h2>
+            <p><span>R$ 13.95</span>/ mês</p>
+            <ul class="pricing-plan__features">
+                <li>10 Website</li>
+                <li>30GB de Armazenamento</li>
+                <li>Transferencias ilimitadas</li>
+                <li>30 horas de suporte mensal</li>
+                <li></li>
+            </ul>
+            <a href="" class="pricing-plan__cta">Assine Já</a>
+        </div>
+    </section>
 </body>
 </html>
