--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="header__nav">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Planos</a></li>
+                <li><a href="" class="header__nav--active">Planos</a></li>
                 <li><a href="">Suporte</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
@@ -24,7 +24,7 @@
     <section class="pricing">
         <div class="pricing-plan">
             <h2 class="class-plan__title">Essencial</h2>
-            <p><span>R$ 3.98</span>/ mês</p>
+            <p><span class="pricing-plan__price">R$ 3.98</span>/ mês</p>
             <ul class="pricing-plan__features">
                 <li>1 Website</li>
                 <li>1GB de Armazenamento</li>
@@ -34,7 +34,7 @@
         </div>
         <div class="pricing-plan">
             <h2 class="class-plan__title">Premium</h2>
-            <p><span>R$ 7.95</span>/ mês</p>
+            <p><span class="pricing-plan__price" >R$ 7.95</span>/ mês</p>
             <ul class="pricing-plan__features">
                 <li>5 Website</li>
                 <li>3GB de Armazenamento</li>
@@ -45,13 +45,13 @@
         </div>
         <div class="pricing-plan">
             <h2 class="class-plan__title">Gold</h2>
-            <p><span>R$ 13.95</span>/ mês</p>
+            <p><span class="pricing-plan__price">R$ 13.95</span>/ mês</p>
             <ul class="pricing-plan__features">
                 <li>10 Website</li>
                 <li>30GB de Armazenamento</li>
                 <li>Transferencias ilimitadas</li>
                 <li>30 horas de suporte mensal</li>
-                <li></li>
+                <li>Email personalizado</li>
             </ul>
             <a href="" class="pricing-plan__cta">Assine Já</a>
         </div>
